--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,4 @@
+@import "~normalize.css";
 @import "~@blueprintjs/core";
 
 .main {
@@ -6,5 +7,22 @@
 
 #profile-image {
   border-radius: 307px;
-  width: 100%;
+  height: 100%;
+}
+
+
+#header-container {
+  padding-left: 0px;
+  padding-right: 0px;
+  border-bottom: 1px solid black;
+  #header-row {
+    height: 60px;
+    padding-bottom: 5px;
+    padding-top: 5px;
+    position: relative;
+
+    > div {
+      height: 100%;
+    }
+  }
 }
